--- a/src/config.properties
+++ b/src/config.properties
@@ -1,9 +1,11 @@
 #duong dan file mon.properties
-prop.url.monconfig=D:\\DevApps\\_Workspace\\Java\\Eclipse\\monitor\\git\\monitoring\\monitor\\src\\main\\webapp\\mon\\configs\\mon.properties
+#prop.url.monconfig=D:\\DevApps\\_Workspace\\Java\\Eclipse\\monitor\\git\\monitoring\\monitor\\src\\main\\webapp\\mon\\configs\\mon.properties
+prop.url.monconfig=/opt/dev/apps/mon/configs/mon.properties
 #duong dan file statusmap.properties
 prop.url.statusmapconfig=/opt/dev/apps/mon/configs/statusmap.properties
 #duong dan file config ip event xml
 xml.url.floweventconfig=/opt/dev/data/snort/xml/viewflowconfig.xml
 
 #host xml file
-xml.host.path=D:\\DevApps\\_Workspace\\Java\\Eclipse\\monitor\\.mydata\\monitoring\\xml\\host.xml
+#xml.host.path=D:\\DevApps\\_Workspace\\Java\\Eclipse\\monitor\\.mydata\\monitoring\\xml\\host.xml
+xml.host.path=/opt/dev/data/nagios/xmlhost.xml
