Commit update after change

--- a/src/config.properties
+++ b/src/config.properties
@@ -1,5 +1,5 @@
 #duong dan file mon.properties
-#prop.url.monconfig=D:\\DevApps\\_Workspace\\Java\\Eclipse\\monitor\\git\\monitoring\\monitor\\src\\main\\webapp\\mon\\configs\\mon.properties
+#prop.url.monconfig=D:/DevApps/_Workspace/Java/Eclipse/monitor/git/monitoring-2023/monitor/src/main/webapp/mon/configs/mon.properties
 prop.url.monconfig=/opt/dev/apps/mon/configs/mon.properties
 #duong dan file statusmap.properties
 prop.url.statusmapconfig=/opt/dev/apps/mon/configs/statusmap.properties
@@ -8,4 +8,4 @@ xml.url.floweventconfig=/opt/dev/data/snort/xml/viewflowconfig.xml
 
 #host xml file
 #xml.host.path=D:\\DevApps\\_Workspace\\Java\\Eclipse\\monitor\\.mydata\\monitoring\\xml\\host.xml
-xml.host.path=/opt/dev/data/nagios/xmlhost.xml
+xml.host.path=/opt/dev/data/nagios/xml/host.xml
